--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
           <ul class="flex reverse noSpaces verticalCenter">
             <li class="col-6-12 left">
               <h1 class="ae-2">Magical balance</h1>
-              <p class="ae-3"><span class="opacity-8">Gasgasgas solves problems. It is the answer to question; you need to understand that first in order to answer the riddle.</span></p>
+              <p class="ae-3">
+								<span class="opacity-8">
+									Gasgasgas <a style="text-decoration: underline" href="https://github.com/uyouthe/gasgasgas">updates</a> all of your dependencies to their latest versions, so you gonna be really productive tonight if you don't wanna loose your job.
+								</span>
+							</p>
               <ul class="flex grid-62 later">
                 <li class="col-6-12 ae-4">
                   <i class="material-icons">offline_bolt</i>
@@ -190,7 +194,7 @@
           </div>
           <a href="https://miloslav.website" class="button blue gradient ae-3">Say thanks</a>
 					<a href="https://github.com/uyouthe/gasgasgas" class="button white ae-4">GitHub</a>
-        </div>
+         </div>
 
       </div>
     </div>
