--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
           <div class="ae-2 margin-top-2">
-            <p class="hero"><span class="opacity-8">Perfection is achieved, not when there is nothing more to add, but when there is nothing left to update to your package.json.</span></p>
+            <p class="hero"><span class="opacity-8">Perfection is achieved, not when there is nothing more to add, but when there is nothing left to update at your package.json.</span></p>
           </div>
           <a href="https://miloslav.website" class="button blue gradient ae-3">Say thanks</a>
 					<a href="https://github.com/uyouthe/gasgasgas" class="button white ae-4">GitHub</a>
