--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p class="hero"><span class="opacity-8">Perfection is achieved, not when there is nothing more to add, but when there is nothing left to update at your package.json.</span></p>
           </div>
           <a href="https://miloslav.website" class="button blue gradient ae-3">Say thanks</a>
-					<a href="https://github.com/uyouthe/gasgasgas" class="button white ae-4">GitHub</a>
+					<a href="https://github.com/mvoloskov/gasgasgas" class="button white ae-4">GitHub</a>
          </div>
 
       </div>
